llvm-toolchain-7 (1:7~+rc1-1~exp3) experimental; urgency=medium

  * dh_strip should be verbose
  * On Stretch (binutils 2.28), do not run strip on libFuzzer.a, libc++.a
    & libc++abi.a because it segfaults
  * Fixed "weak-library-dev-dependency libc++-7-dev on libc++-7-helpers"
  * Fixed "libomp5-7: shlibs-declares-dependency-on-other-package
           libomp5-7) (>= 1:7~svn298832-1~)"

  [ Reshabh Sharma ]
  * Fixed "Lintian warnings for libc++abi-7-dev package"
    - Warning: libc++abi-7-dev: breaks-without-version libc++-dev
    - Warning: libc++abi-7-dev: breaks-without-version libc++abi-dev
    - Warning: llvm-toolchain-7 source: binaries-have-file-conflict
      libc++abi-7-dev libc++abi1-7 usr/lib/llvm-7/lib/libc++abi.so

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 16 Aug 2018 17:49:31 +0200

llvm-toolchain-7 (1:7~+rc1-1~exp2) experimental; urgency=medium

  * Disable force-gcc-header-obj.diff as it is introducing
    some regressions in the search headers
    (Closes: #903709)
  * libc++-7-dev should depend on libc++-7-helpers (and not
    libc++-helpers)
  * Fix the links in the helper package

  [ Reshabh Sharma ]
  * Fix the path to libc++ header
  * libc++.so was in two packages

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 15 Aug 2018 15:27:57 +0200

llvm-toolchain-7 (1:7~+rc1-1~exp1) experimental; urgency=medium

  * First testing release of 7
    - Rename packages
    - Update the VCS-* URL
  * Standards-Version to 4.2.0

  [ Dimitri John Ledkov ]
  * Enable lldb on ppc64el LP: #1777136

  [ Reshabh Sharma ]
  * Integrate libcxx and libcxxabi as part of the llvm-toolchain packages
    Very similar to the previous packages
    except that libc++abi-7-test & libc++-7-test are no longer shipped
    Outcome of the LLVM GSoC 2018
    (Closes: #813673)

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 07 Aug 2018 19:25:09 +0200

llvm-toolchain-snapshot (1:7~svn336894-1~exp1) experimental; urgency=medium

  [ Reshabh Sharma ]