@@ -354,8 +354,13 @@ endif
 	mkdir -p libcxxabi/build
 	mkdir -p libcxx/build
 
+	CMAKE_BIN=cmake; \
+	if test -f /tmp/cmake/bin/cmake; then \
+		CMAKE_BIN=/tmp/cmake/bin/cmake; \
+	fi; \
+	echo "Using cmake: $$CMAKE_BIN"; \
 	cd libcxxabi/build && \
-	cmake ../ \
+	$(PRE_PROCESS_CONF) $$CMAKE_BIN ../ \
 	$(LIBCXX_CMAKE_OPTIONS) \
 	-DLIBCXXABI_LIBCXX_PATH=$(BASE_PATH)/libcxx \
 	-DLIBCXXABI_LIBCXX_LIBRARY_PATH=$(BASE_PATH)/libcxx/build/lib \
@@ -364,8 +369,13 @@ endif
 	-DLLVM_ENABLE_RTTI=ON && \
 	$(MAKE) $(NJOBS) VERBOSE=1
 
+	CMAKE_BIN=cmake; \
+	if test -f /tmp/cmake/bin/cmake; then \
+		CMAKE_BIN=/tmp/cmake/bin/cmake; \
+	fi; \
+	echo "Using cmake: $$CMAKE_BIN"; \
 	cd libcxx/build && \
-	cmake ../ \
+	$(PRE_PROCESS_CONF) $$CMAKE_BIN ../ \
 	$(LIBCXX_CMAKE_OPTIONS) \
 	-DLIBCXX_CXX_ABI=libcxxabi \
 	-DLIBCXX_CXX_ABI_INCLUDE_PATHS=$(BASE_PATH)/libcxxabi/include \
