@@ -6,6 +6,8 @@ llvm-toolchain-7 (1:7~+rc1-1~exp3) experimental; urgency=medium
   * Fixed "weak-library-dev-dependency libc++-7-dev on libc++-7-helpers"
   * Fixed "libomp5-7: shlibs-declares-dependency-on-other-package
            libomp5-7) (>= 1:7~svn298832-1~)"
+  * Also use the local cmake binary if available (for trusty)
+    and take in account the PRE_PROCESS_CONF option
 
   [ Reshabh Sharma ]
   * Fixed "Lintian warnings for libc++abi-7-dev package"
